Fixed Game Scrollbars
No more scrollbars on game window, yay!

--- a/myGame/static/resources/css/style.css
+++ b/myGame/static/resources/css/style.css
@@ -304,6 +304,16 @@ input[type="submit"]:active
   animation: fadeInAni 1s ease-in forwards;
 }
 
+#gameContainer
+{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 .ballCountOverlay
 {
   position: absolute;
